# jadili

./: .gitignore  Cargo.toml  README.md  configure.py  mzoon_commit  realtime.py
backend/: Cargo.toml
backend/src/: main.rs
frontend/: Cargo.toml
frontend/js/: audio-player.js
frontend/src/: app.rs  block_edit_page.rs  event_edit_page.rs  events_page.rs  header.rs  lib.rs  login_page.rs  router.rs
public/css/: main.css
research/: Cargo.toml  configure.py  realtime  realtime.py  upload.py
research/src/: main.rs  read-json-files.rs  record-wav.rs
shared/: Cargo.toml
shared/src/: lib.rs
