[package]
version = "0.1.0"
name = "backend"
repository = "https://github.com/stvsmth/jadili"
authors = ["Steve Smith <stvsmth@gmail.com>"]
description = "Automatic speech translation, with human support"
categories = ["Web programming"]
license = "MIT"
readme = "../README.md"
edition = "2021"

[dependencies]
moon = { git = "https://github.com/MoonZoon/MoonZoon", rev = "15cb619faca5f78a47e08f4af4bfa595f0eb64b1" }
shared = { path = "../shared", features = ["backend"] }
