[package]
version = "0.1.0"
name = "backend"
repository = "https://github.com/stvsmth/jadili"
authors = ["Steve Smith <stvsmth@gmail.com>"]
description = "Automatic speech translation, with human support"
categories = ["Web programming"]
license = "MIT"
readme = "../README.md"
edition = "2021"

[dependencies]
moon = { git = "https://github.com/MoonZoon/MoonZoon", rev = "5769c15d6376ce591120c994764809c1a65ed7bd" }
shared = { path = "../shared", features = ["backend"] }
