[package]
version = "0.1.0"
name = "frontend"
repository = "https://github.com/MoonZoon/MoonZoon"
authors = ["Steve Smith <stvsmth@gmail.com>"]
description = "MoonZoon demo"
categories = ["MoonZoon", "example"]
license = "MIT"
readme = "../README.md"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
zoon = { git = "https://github.com/MoonZoon/MoonZoon", rev = "5769c15d6376ce591120c994764809c1a65ed7bd" }
rand = { version = "0.8.3", features = ["small_rng", "getrandom"], default-features = false }
shared = { path = "../shared", features = ["frontend"] }

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-Oz']
