[package]
name = "research"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = {version = "1", features = ["full"] }
hyper = {version = "0.14" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[[bin]]
name = "read-json-files"
path = "src/read-json-files.rs"
